# PaddleOCRAnimation

./: .gitignore  pyproject.toml  requirements.txt
PaddleOCRAnimation/dataset/: create_dataset.py  detDataset.py  recDataset.py  trainingDetection.py
PaddleOCRAnimation/dataset/utilis/: create_dataset_utilis.py  disturb.py  events_to_dataset.py
PaddleOCRAnimation/libs/linux/: libass.so.9.4.1  vobsub2png
PaddleOCRAnimation/video/: Video.py  classes.py  iso_codes.py  utilis.py
PaddleOCRAnimation/video/sub/: DocumentPlus.py  DocumentSrt.py  RendererClean.py  box.py  vobsub.py  vobsub2png.py
examples/data/: testVidExtrait.fr.srt
examples/data/subs/: A1_t00.ass  A1_t00_track3_[fre].idx  A1_t00_track3_[fre].sub  Excel Saga - 1x02 - The Woman From Mars_track4_[fre].idx  Excel Saga - 1x02 - The Woman From Mars_track4_[fre].sub  [Elecman] Capitaine Tylor E03 [BDRIP][1080p x265 10bits Vostfr]_track3_[fre].srt  [zza] Golgo 13 - 20 [576p.x265]_track3_[fre].idx  [zza] Golgo 13 - 20 [576p.x265]_track3_[fre].sub  subs.ass  tiny.idx  tiny.srt
fine_tunning_paddleOCR/: PP-OCRv5_server_det_anime.yml  commandeTrainingDetection.sh  french_PP-OCRv5_mobile_rec.yml  french_PP-OCRv5_server_rec.yml
tests/: iso_codes_test.py  sub_test.py  video_test.py  vobsub2png_test.py
